# College-Major-Project

./: .gitignore  README.md  analyze_video.py  config.py  download_model.py  main.py  pyproject.toml  requirements.txt
alerts/: alert_manager.py
detectors/: drunk_detector.py  eye_detector.py  head_pose_detector.py  phone_detector.py  seatbelt_detector.py  yawn_detector.py
notebooks/: driver-fatigue-monitoring-system-with-yolo-v8.ipynb  head-pose-estimation-using-mediapipe.ipynb  seatbelt-vs-noseatbelt.ipynb  yawn-detector-using-cnn.ipynb
utils/: drawing.py  landmarks.py
