[project]
name = "college-major-project"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10,<3.13"
dependencies = [
    "matplotlib>=3.7.0",
    "mediapipe>=0.10.0,<0.10.20",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "pygame>=2.6.1",
    "scipy>=1.10.0",
    "ultralytics>=8.4.33",
]
